// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthorEmailsAction renders multiple current emails in a dropdown 1`] = `
<ListItemAction>
  <DropdownMenu
    disabled={false}
    title={
      <Tooltip
        arrowPointAtCenter={false}
        autoAdjustOverflow={true}
        mouseEnterDelay={0.1}
        mouseLeaveDelay={0.1}
        placement="top"
        title="Contact author"
        transitionName="zoom-big-fast"
      >
        <Button
          block={false}
          ghost={false}
          htmlType="button"
          loading={false}
        >
          <Icon
            type="mail"
          />
        </Button>
      </Tooltip>
    }
  >
    <MenuItem
      key="dude@email.cern"
    >
      <ExternalLink
        href="mailto:dude@email.cern"
      >
        dude@email.cern
      </ExternalLink>
    </MenuItem>
    <MenuItem
      key="other-dude@email.cern"
    >
      <ExternalLink
        href="mailto:other-dude@email.cern"
      >
        other-dude@email.cern
      </ExternalLink>
    </MenuItem>
  </DropdownMenu>
</ListItemAction>
`;

exports[`AuthorEmailsAction renders single email 1`] = `
<ListItemAction>
  <Tooltip
    arrowPointAtCenter={false}
    autoAdjustOverflow={true}
    mouseEnterDelay={0.1}
    mouseLeaveDelay={0.1}
    placement="top"
    title="Contact author"
    transitionName="zoom-big-fast"
  >
    <ExternalLink
      href="mailto:dude@email.cern"
    >
      <Icon
        type="mail"
      />
    </ExternalLink>
  </Tooltip>
</ListItemAction>
`;
